--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -46,6 +46,9 @@ label.invalid
   bottom: -15px
   left: 5px
 
+a
+  display: inline-block
+
 #email-error
   z-index: 100
   text-decoration: none
