--- a/sass/blocks/_newsletter.sass
+++ b/sass/blocks/_newsletter.sass
@@ -61,3 +61,4 @@
     top: 0
     height: 100%
     border: none
+    border-radius: 0px 4px 4px 0px
